--- a/package.json
+++ b/package.json
@@ -5,32 +5,49 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.72.4"
+    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/google-signin": "^4.0.3",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-firebase/app": "^10.3.0",
+    "@react-native-firebase/auth": "^10.3.1",
+    "@react-native-firebase/firestore": "^10.3.1",
+    "@react-native-firebase/storage": "^10.3.1",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
+    "moment": "^2.29.1",
+    "react": "16.13.1",
+    "react-native": "0.63.2",
+    "react-native-action-button": "^2.8.5",
+    "react-native-fbsdk": "^2.0.0",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-crop-picker": "^0.35.1",
+    "react-native-onboarding-swiper": "^1.1.4",
+    "react-native-reanimated": "^1.13.0",
+    "react-native-safe-area-context": "^3.1.7",
+    "react-native-screens": "^2.10.1",
+    "react-native-skeleton-placeholder": "^3.0.2",
+    "react-native-vector-icons": "^7.1.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1"
   },
-  "engines": {
-    "node": ">=16"
+  "jest": {
+    "preset": "react-native"
   }
 }
